@@ -11,6 +11,7 @@ Other improvements from previous release:
 * Fix driver build on kernels without PCI support.
 * Fix completion of synchronous connect in case of timeout.
 * Fix completion of large send in case of unreachable destination.
+* Detect various interface status change at runtime.
 * Add debugging capabilities to make sure no request has been lost.
 * Add verbose messages tuning capabilities.
 * Add advanced process binding capabilities for Open-MX-aware multislice
